--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-	"name": "cf-sveltekit-drizzle",
+	"name": "eats-wishlist",
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "pnpm run build && wrangler pages dev",
-		"preview:ci": "pnpm db:generate && pnpm db:migrate &&pnpm run build && wrangler pages dev",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
@@ -17,10 +16,10 @@
 		"test:e2e": "playwright test",
 		"db:push": "drizzle-kit push",
 		"db:generate": "drizzle-kit generate",
-		"db:migrate": "wrangler d1 migrations apply my-database --local && drizzle-kit migrate",
+		"db:migrate": "wrangler d1 migrations apply eats-wishlist-dev --local && drizzle-kit migrate",
 		"db:studio": "drizzle-kit studio",
 		"db:seed:local": "curl http://localhost:5173/api/seed",
-		"deploy:db": "d1 migrations apply my-database --remote",
+		"deploy:db": "d1 migrations apply eats-wishlist-prod --remote",
 		"deploy:pages": "pnpm run build && wrangler pages deploy",
 		"cf-typegen": "wrangler types && mv worker-configuration.d.ts src/"
 	},
