--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 #:schema node_modules/wrangler/config-schema.json
-name = "cf-sveltekit-drizzle"
+name = "eats-wishlist"
 compatibility_date = "2024-10-22"
 pages_build_output_dir = ".svelte-kit/cloudflare"
 compatibility_flags = [ "nodejs_compat" ]
@@ -28,8 +28,8 @@ ENVIRONMENT = "development"
 # Docs: https://developers.cloudflare.com/pages/functions/bindings/#d1-databases
 [[d1_databases]]
 binding = "DB"
-database_name = "my-database"
-database_id = "dc32e43d-b62f-4cd3-8cbf-68e242187dce"
+database_name = "eats-wishlist-dev"
+database_id = "998086cc-3f51-4e2a-b35d-27d96b5764a7"
 migrations_dir = "drizzle/migrations"
 
 # Bind a Durable Object. Durable objects are a scale-to-zero compute primitive based on the actor model.
@@ -75,8 +75,8 @@ ENVIRONMENT = "preview"
 
 [[env.preview.d1_databases]]
 binding = "DB"
-database_name = "my-database"
-database_id = "dc32e43d-b62f-4cd3-8cbf-68e242187dce"
+database_name = "eats-wishlist-dev"
+database_id = "998086cc-3f51-4e2a-b35d-27d96b5764a7"
 migrations_dir = "drizzle/migrations"
 
 # [[env.preview.kv_namespaces]]
@@ -90,6 +90,6 @@ ENVIRONMENT = "production"
 
 [[env.production.d1_databases]]
 binding = "DB"
-database_name = "my-database"
-database_id = "dc32e43d-b62f-4cd3-8cbf-68e242187dce"
+database_name = "eats-wishlist-prod"
+database_id = "32cd3d2b-b383-485e-b7f5-fbf84c147060"
 migrations_dir = "drizzle/migrations"
